--- a/bur_coro.vcxproj.filters
+++ b/bur_coro.vcxproj.filters
@@ -19,4 +19,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="bur_coro.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="bur_std.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
